fixed spacing issues and changed Inquizitive picture

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   
 
 .homeSection {
-  height: 800px;
+  height: 850px;
 }
 
 .contactSection {
