--- a/src/assets/About.css
+++ b/src/assets/About.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .leftAboutSection {
@@ -82,7 +82,7 @@
 
 .aboutList li {
   font-family: Comic;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   line-height: 2rem;
   margin-top: 20px;
 }
@@ -123,6 +123,9 @@ table {
     .leftAboutSection, .rightAboutSection {
       margin: auto;
       width: 100%;
+    }
+    .basicCol {
+      display: none;
     }
   }
 
