--- a/src/assets/Education.css
+++ b/src/assets/Education.css
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 50px;
 }
 
 .leftEducationSection {
@@ -18,7 +17,7 @@
 
 .educationLabel {
   font-family: Comic;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .photoFrame {
@@ -26,7 +25,7 @@
   flex-direction: column;
   align-items: center; 
   width: 30vw; 
-  height: 50vh; 
+  height: 30vh; 
   margin: auto; 
 }
 
@@ -61,7 +60,7 @@
 
 .educationList li {
   font-family: Comic;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   line-height: 2rem;
   margin-top: 20px;
 }
